fix loading icon shift

--- a/src/styles/_body_svg.scss
+++ b/src/styles/_body_svg.scss
@@ -28,7 +28,7 @@
       text-anchor: end;
     }
 
-    &.text_center, &.loading {
+    &.text_center {
       text-anchor: middle;
     }
   }
